--- a/src/padevchooser.glade
+++ b/src/padevchooser.glade
@@ -5,7 +5,7 @@
 
 <widget class="GtkDialog" id="preferencesDialog">
   <property name="border_width">6</property>
-  <property name="title" translatable="yes">Polypaudio Applet Preferences</property>
+  <property name="title" translatable="yes">PulseAudio Applet Preferences</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
