make "start on login" button work
git-svn-id: file:///home/lennart/svn/public/padevchooser/trunk@11 e4aeda27-4315-0410-ac56-b21855d76123

--- a/src/padevchooser.glade
+++ b/src/padevchooser.glade
@@ -342,7 +342,7 @@
 			  <property name="spacing">6</property>
 
 			  <child>
-			    <widget class="GtkCheckButton" id="sessionCheckButton">
+			    <widget class="GtkCheckButton" id="loginCheckButton">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
 			      <property name="label" translatable="yes">Start applet on session _login</property>
